remove masked loads, stores