@@ -83,11 +83,10 @@
                 <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <id>test</id>
+                        <id>benchmark</id>
                         <goals>
                             <goal>exec</goal>
                         </goals>
-                        <phase>test</phase>
                         <configuration>
                             <classpathScope>test</classpathScope>
                             <executable>java</executable>
@@ -95,11 +94,14 @@
                                 <argument>-cp</argument>
                                 <modulepath/>
                                 <argument>--add-modules=jdk.incubator.vector</argument>
+                                <argument>--add-modules=jdk.incubator.foreign</argument>
                                 <argument>--add-opens</argument>
                                 <argument>java.base/java.lang=ALL-UNNAMED</argument>
+                                <argument>-XX:+UnlockDiagnosticVMOptions</argument>
+<!--                                <argument>-XX:CompileCommand=print,*GetCharsBenchmark.inlStr</argument>-->
                                 <argument>-Djmh.blackhole.mode=COMPILER</argument>
                                 <argument>io.github.merykitty.inlinestring.benchmark.BenchmarkEntry</argument>
-                                <argument>GCBenchmark</argument>
+                                <argument>RepeatBenchmark</argument>
                                 <argument>-prof</argument>
                                 <argument>gc</argument>
                             </arguments>
